# open-meteo-rs

./: Cargo.toml  LICENSE.txt  Makefile  README.md  dprint.json  flake.nix  shell.nix
.github/workflows/: ci.yaml
examples/: archive.rs  forecast.rs
src/: air_quality.rs  client.rs  errors.rs  forecast.rs  geocoding.rs  lib.rs  location.rs
