[package]
name = "open-meteo-rs"
version = "0.0.4"
edition = "2021"
description = "HTTP client for open-meteo.com api"
homepage = "https://github.com/angelodlfrtr/open-meteo-rs"
repository = "https://github.com/angelodlfrtr/open-meteo-rs"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"]}
chrono-tz = "0.8.2"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
snafu = "0.7.4"
tokio = { version = "1.24.2", features = ["full"] }

[dev-dependencies]
futures = "0.3.25"
