[package]
name = "open-meteo-rs"
version = "0.0.5"
edition = "2021"
homepage = "https://github.com/angelodlfrtr/open-meteo-rs"
license-file = "LICENSE.txt"
repository = "https://github.com/angelodlfrtr/open-meteo-rs"
description = "HTTP client for open-meteo.com api"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"]}
chrono-tz = "0.10.4"
reqwest = { version = "0.13.1", features = ["json", "rustls"], default-features = false}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = "0.8.6"
tokio = { version = "1.46.0", features = ["full"] }

[dev-dependencies]
futures = "0.3.31"
